# hatching

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  generate_test_meshes.py  imgui.ini  mainpage.dox
shaders/: hatching.frag  hatching.vert
src/: camera.cpp  camera.h  direction_field.cpp  direction_field.h  geometry.cpp  geometry.h  main.cpp  renderer.cpp  renderer.h  stripe_pattern.cpp  stripe_pattern.h  triangle_mesh.cpp  triangle_mesh.h
tests/: test_direction_field.cpp  test_geometry.cpp  test_mesh.cpp  test_stripe_pattern.cpp
web/: CMakeLists.txt  index.html
web/js/: app.js  camera.js  renderer.js
web/src/: bridge.cpp  tiny_obj_loader.h
